@@ -24,8 +24,10 @@ use MooseX::Types -declare => [qw(
     ISO8601DateStr
     ISO8601TimeStr
     ISO8601DateTimeStr
+    ISO8601DateTimeTZStr
     ISO8601TimeDurationStr
     ISO8601DateDurationStr
+    ISO8601DateTimeDurationStr
     ISO8601DateTimeDurationStr
 )];
 
@@ -44,6 +46,10 @@ subtype ISO8601DateTimeStr,
     as Str,
     where { /$datetime_re/ };
 
+my $datetimetz_re = qr/^(\d{4})-(\d{2})-(\d{2})T(\d{2}):(\d{2}):(\d{2})(?:(?:\.|,)(\d+))?((?:\+|-)\d\d:\d\d)$/;
+ subtype ISO8601DateTimeTZStr,
+    as Str,
+    where { /$datetimetz_re/ };
 
 # TODO: According to ISO 8601:2004(E), the lowest order components may be
 # omitted, if less accuracy is required.  The lowest component may also have
@@ -102,6 +108,10 @@ subtype ISO8601DateTimeDurationStr,
         ISO8601TimeStr, sub { die "cannot coerce non-UTC time" if ($_[0]->offset!=0); $_[0]->hms(':') . 'Z' },
         ISO8601DateStr, sub { $_[0]->ymd('-') },
         ISO8601DateTimeStr, sub { die "cannot coerce non-UTC time" if ($_[0]->offset!=0); $_[0]->ymd('-') . 'T' . $_[0]->hms(':') . 'Z' },
+        ISO8601DateTimeTZStr, sub {
+            DateTime::TimeZone->offset_as_string($_[0]->offset) =~ /(.\d\d)(\d\d)/;
+            $_[0]->ymd('-') . 'T' . $_[0]->hms(':') . "$1:$2"
+        },
     );
 
     foreach my $type_name (keys %coerce) {
@@ -182,6 +192,7 @@ subtype ISO8601DateTimeDurationStr,
     my @datefields = qw/ year month day /;
     my @timefields = qw/ hour minute second nanosecond /;
     my @datetimefields = (@datefields, @timefields);
+    my @datetimetzfields = (@datefields, @timefields, "time_zone");
     coerce DateTime,
         from ISO8601DateTimeStr,
             via {
@@ -191,6 +202,15 @@ subtype ISO8601DateTimeDurationStr,
                     $fields[6] .= "0" x $missing;
                 }
                 DT->new( zip(@datetimefields, @fields), time_zone => 'UTC' );
+            },
+        from ISO8601DateTimeTZStr,
+            via {
+                my @fields = map { $_ || 0 } $_ =~ /$datetimetz_re/;
+                if ($fields[6]) {
+                    my $missing = 9 - length($fields[6]);
+                    $fields[6] .= "0" x $missing;
+                }
+                DT->new( zip(@datetimetzfields, @fields ) );
             },
         from ISO8601DateStr,
             via {
